first draft of introduction

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -48,7 +48,29 @@ Cleavage happens at points where it makes sense for chemical reactions and do no
 electronic properties of the fragments. For retrosynthetic applications, many cleavage points are at functional groups because 
 those are the reactive sites of molecules. However, for our application, we especially do not want to fragment at these
 reactive points given how electron rich they are and how much the electronic density changes when they are altered. 
-Fragmentation algorithms for linear scaling include 
+Fragmentation algorithms for linear scaling such as Divide-and-Conquer methods [@doi:10.1063/1.472136], effective fragment potential method
+[@doi:10.1002/jcc.10309] and systematic molecular fragmentation methods [@doi:10.1039/c2cp23832b] require the users to manually 
+specify where the cuts should be or which bonds not to fragment. Furthermore, none of these methods address the needs specific
+to fragmenting molecules for QC torsion scans. Fragments need to include all atoms involved in 1-4 interactions, since they 
+are incorporated in the fitting procedure. We also need a systematic way to determine if remote substituents change
+the barrier to rotation significantly for the central bond of interest.
+
+In this work, we use the Wiberg Bond Order (WBO) [CITE] (10.1016/0040-4020(68)88057-3), which is both simple to calculate
+from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs are correlated with bond
+vibrational frequencies [@doi:10.1021/jp4010345] and is used to predict trigger bonds in high energy-density material
+because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Here, we develop an approach 
+that uses the WBO to validate whether a fragmentation scheme corrupts the local chemical environment of interest,
+with a particular focus on fragmentation schemes suitable for QC torsion drives. Our approach uses simple 
+heuristics to arrive at a minimal fragment for QM torsion scan that is representative of of the torsion scan of the 
+substructure in the parent molecules. For a central bond, include all atoms that are involved in the sterics 
+of a torsion scan. Then use the WBO as a surrogate signal to determine if the fragment needs to be
+grown out more to restore the correct electronics around the central bonds. 
+
+The paper is organizes as follows:
+Section 2 provides a mathematical and physical definition of the problem.
+Section 3 provides the motivation for using the WBO as a surrogate, evaluates how robust it is, proposes a minimal 
+fragmentation scheme and describes a rich validation set that can be used to benchmark fragmentation schemes
+Section 4 provides a discussion of the implications of this study and section 5 provides detailed methods. 
 
 
 
