wrote some more

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -55,7 +55,7 @@ to fragmenting molecules for QC torsion scans. Fragments need to include all ato
 are incorporated in the fitting procedure. We also need a systematic way to determine if remote substituents change
 the barrier to rotation significantly for the central bond of interest.
 
-In this work, we use the Wiberg Bond Order (WBO) [CITE] (10.1016/0040-4020(68)88057-3), which is both simple to calculate
+In this work, we use the Wiberg Bond Order (WBO) [@doi:10/fvwkkh], which is both simple to calculate
 from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs are correlated with bond
 vibrational frequencies [@doi:10.1021/jp4010345] and is used to predict trigger bonds in high energy-density material
 because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Here, we develop an approach 
