wrote some more

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -84,7 +84,7 @@ which is in line with chemical intuition. Conjugation stabilizes conformations a
 At higher energy conformers, the aromatic rings are out of plan and cannot conjugate. Therefore the WBO is lower for those conformers. At lower energy
 conformations, the rings are in plane and can conjugate so the WBO is higher.
 
-### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
+#### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
 We found that certain bond orders are strongly correlated or anticorrelated with each other, indicating strong electronic coupling.
 Figure 4C shows the Pearson correlation coefficient for each bond WBO distribution against all other bond WBO distributions.
 There is a clear structure in this correlation plot. The square formed by bonds from atoms 24-29 shows that the alternating
@@ -96,12 +96,54 @@ The bond closer to the quinazoline (bond 23-19) has WBO distribution correlated 
 chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline or phenyl ring. The results are similar
 for other kinase inhibitors tested as shown in supplementary figure 1
 
-### ELF10 provides a useful way to capture informative conformation-independent WBOs
+#### ELF10 provides a useful way to capture informative conformation-independent WBOs
 As we have shown, the WBO is conformation dependent and this dependency can also be highly informative of the electronic coupling
-in a system. However, it can become computationally expensive to calculate the WBO for all conformations and if we want to use
-WBOs as a surrogate to determine is our fragment is representative of the parent molecule, we need a way to capture informative
-conformation-independent WBOs. Electronically Least-interacting Functional groups (ELF) conformation selection implemented in quacpac
+in a system. Figure 5 shows the distribution of standard deviations of WBO distribution with respect to conformation in blue.
+Most of the standard deviations fall below 0.02, which is encouragingly small. However, it can become computationally expensive to calculate the WBO for all conformations. If we want to
+use WBOs as a surrogate to determine if our fragment is representative of the parent molecule in a reproducible way,
+we need a way to capture informative conformation-independent WBOs. Electronically Least-interacting Functional groups (ELF) conformation selection implemented in quacpac
 [CITE] resolves the issue of sensitivity of molecular mechanics electrostatic energies from QM derived charges.
 [Leave to Christopher Bayly to describe]{.banner .lightyellow}
 This method can also be applied to deriving WBOs that are insensitive to conformers. To test how well ELF10 WBOs correspond to expected
-WBOs, we calculated ELF10 WBOs for the kinase inhibitor set shown in supplementary figure 1.
+WBOs, we calculated ELF10 WBOs for the kinase inhibitor set shown in supplementary figure 1. Figure 3A shows the distribution of all ELF WBO. To
+gain insight how the ELF10 WBOs corresponds to bond multiplicity, we separated the distributions by element. Figure 3B shows the distributions
+of carbon-carbon bonds. The blue distribution shows the carbon-carbon bonds not in rings. There are peaks at one, two and three
+which correspond to single, double and triple bonds. Single bonds are the most abundant followed by double and then triple. The blue
+distribution shows carbon-carbon bonds in rings. There is a peak as 1.0 and 1.5 which corresponds to single and aromatic rings.
+Longer, weaker bonds involving Sulfur and Phosphorous  [Fig 3C] both have peaks at ~0.6. Oxygen has a peak at 1.0 and 1.8 which corresponds
+to single and double bonds. For the rest of this section we will be focusing on the robustness and generalizability of ELF10 WBOs.
+
+#### WBOs are a robust signal to how remote substituent changes alter a bond's torsion barrier height
+To investigate how resonance and electronic effects from remote substituents change the torsion energy of a bond,
+we took inspiration from the Hammett equation [@doi:10.1021/ja01280a022] of reactions involving benzoic acid derivatives.
+The Hammett equation relates meta and para benzoic acid substituents to the acid's ionization equilibrium constants
+
+\begin{equation} log \frac{K}{K_0} = \sigma\rho \end{equation}
+
+Where $\sigma$ is a substituent constant and $\rho$ is a reaction constant. It aims to isolate the resonance and inductive effects
+of substituents from the sterics effects of a reaction. Here, we generated a combinatorial set of meta and para subsituted phenyls
+and pyridine [Fig 6A] with functional groups that cover a wide range of electron donating and withdrawing groups as shown in figure 6A.
+We then calculated the ELF10 WBO for the bond attaching the functional
+group to the aromatic ring for all functional groups [highlighed bonds in figure 6A]. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
+defined as a change more than two bonds away. For each functional group, we get a distribution of WBOs, where each point in the distribution
+is the WBO at the bond connecting that functional group to the meta or para substituted phenyl or pyridine ring for all other functional groups.
+The resulting distributions are shown in supplementary figure 2. It is interesting to note that the trend of decreasing WBOs for more electron
+donating groups anti correlates with with increasing substituent constant for the para effect [Supplementary figure 2B]. Functional groups
+that are more electron donating will have more electron density on the bond attaching the functional group to the benzoic acid. The resonance and/or inductive effect
+destabilize the benzoate, increases its pKa, which corresponds to lower substituent constants.
+
+To investigate how these long range effects observed in the WBOs capture changes in the bonds' torsion potential energy, we ran representative QC torsion
+scans for 17 of the functional groups [Figure 6A]. We did not run QC torsion scans for functional groups that either did not have a torsion such
+as halogens, were congested such as trimethyl amonium and factional groups where the WBOs did not change by more than 0.01 for different functional
+groups at the meta or para position such as methyl. We chose the representative molecules for the 17 functional groups by sorting them
+by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in supplementary
+figure 3. We show a representative series of torsion scan for the nitro functional group in figure 6D. The torsion energy barrier height
+increase with increasing ELF10 WBO of the bond. In addition, Figure 6E shows that the Wiberg-Lowdin bond orders are anti-correlated with
+the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the trend
+shown in figure 2D that the torsion energy barrier height is correlated with WBO generalizes to all functional groups tested in this set [Fig 6C].
+
+For most functional groups, the change in WBOs correspond to changes in torsion barrier heights, but not in the torsion energy profile [supplementary figure 3].
+However, for some functional groups the change in WBO only captures one aspect of the electronic changes because not only do the torsion energy
+barrier heights increase, but the profile changes considerably as shown in figure 7 for [hold for functional group and some way to explain this].
+
+### A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
