--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -125,7 +125,7 @@ of substituents from the sterics effects of a reaction. Here, we generated a com
 and pyridine [Fig 6A] with functional groups that cover a wide range of electron donating and withdrawing groups as shown in figure 6A.
 We then calculated the ELF10 WBO for the bond attaching the functional
 group to the aromatic ring for all functional groups [highlighed bonds in figure 6A]. This allowed us to isolate the effect on a bond's WBO from remote chemical environment changes,
-defined as a change more than two bonds away. For each functional group, we get a distribution of WBOs, where each point in the distribution
+defined as a change more than two bonds away, from other effects such as sterics and conformations. For each functional group, we get a distribution of WBOs, where each point in the distribution
 is the WBO at the bond connecting that functional group to the meta or para substituted phenyl or pyridine ring for all other functional groups.
 The resulting distributions are shown in supplementary figure 2. It is interesting to note that the trend of decreasing WBOs for more electron
 donating groups anti correlates with with increasing substituent constant for the para effect [Supplementary figure 2B]. Functional groups
@@ -146,4 +146,76 @@ For most functional groups, the change in WBOs correspond to changes in torsion 
 However, for some functional groups the change in WBO only captures one aspect of the electronic changes because not only do the torsion energy
 barrier heights increase, but the profile changes considerably as shown in figure 7 for [hold for functional group and some way to explain this].
 
+When we compare the standard deviations of WBO distributions with respect to conformation versus with respect to changes in chemical space [Figure 5 red distribution],
+we find that the changes in ELF10 WBO for remote chemical environment changes are bigger than the changes in WBO that arise from change in conformation.
+This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
+
 ### A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
+The WBO is a robust indicator of changes in torsion energy barrier heights for related torsions. Therefore, if a fragment's
+WBO changes too much from its parent WBO at the same bond, the fragmentation is probably inadequate. Using this concept,
+we extended the fragment-and-cap scheme proposed by [CITE Pfizer paper] by considering resonance via WBOs. The scheme, illustrated
+in figure 8 is as follows:
+
+1. Find rotatable bond. For this step we use the SMARTS pattern [hold for SMARTS pattern]
+2. Build out one bond in each direction
+3. If the next atom is part of a ring or part of a functional group listed in figure 8B, keep the ring and functional group
+4. Keep meta substitutents to the rotatable bond of interest because it is involved in the sterics of the torsion
+4. Cap with hydrogen and recalculate WBO
+5. If the fragment's WBO differs by more than a user defined threshold, continue grow out one bond at a time until the
+fragment's WBO is within the threshold of the parent WBO.
+
+### Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
+This fragmentation scheme improves upon Pfizers scheme, however, it leaves some parameters up to the user. In order to asses various
+thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
+a useful validation set. The goal of this set was to find molecules that are challenging to fragment. In other words, molecules
+that have bonds that are sensitive to remote substituent changes. To find these molecules, we first filtered DrugBank (version 5.1.3 downloaded
+on 2019-06-06) with the following criteria:
+
+1. FDA approved small molecules
+2. Largest ring size has less than 14 heavy atoms
+3. Smallest ring size has at least 3 heavy atoms
+4. Molecule must have at least one aromatic ring
+5. Molecule has only one connnected component
+
+This left us with 730 small molecules [Supplementary figure 3]. Charged molecules exacerbates remote substituent sensitivity and many
+molecules are in charged states at physiological pH. To ensure that our dataset is representative of drugs at physiological pH, we used
+the OpenEye `EnumerateReasonableTautomers` to generate tautomers that are highly populated at pH ~7.4. This tautomer enumeration
+extended the set to 1234 small molecules [Supplementary figure 3B]
+We then generated all possible fragments of these molecules by using a combinatorial fragmentation scheme. In this scheme, every rotatable
+bond is fragmented and then all possible connected fragments are generated where the smallest fragment has 4 heavy atoms and the largest
+fragment is the parent molecule. This scheme generated ~300,000 fragments.
+For each fragment, Omega was used to generate conformers and the AM1 WBO was calculated for every bond in every conformer. This resulted
+in a distribution of WBOs for all bonds in all fragments as shown in figure 9A.
+
+#### Scoring how well fragments preserve chemical environments using WBO distributions
+Each fragment needs to be assigned a score of how well is preserves its parent chemical environment. To score each fragment, we compare
+the conformer dependent WBO for a bond in a fragment context against the conformer-dependent distribution of WBO for the same bond in the parent molecule
+context. To compare these distributions, we compute the maximum mean discrepancy [CITE] with a squared kernel for the fragment distribution
+to the parent as follows:
+
+\begin{equation} MMD = \sqrt{(E[X]-E[Y])^2 + (E[X^2] - E[Y^2])^2} \end{equation}
+
+where $X$ is the parent WBO distribution and $Y$ is the fragment WBO distribution. Including the squared mean incorporates the variance
+of the distribution. It is important incorporate changes in variance given how the variance of the WBO distributions change for different
+chemical environments. The final validation set was chosen by finding the fragments that have bonds with the top 50 scoring MMD scores.
+The 50 molecules are shown in figure 10. The sensitive bonds that are high scoring are highlighted.
+
+#### Good fragmentation schemes minimize both chemical environment disruption and fragment size
+The goal of our fragmentation scheme is to find fragments that have a WBO distribution of the bond of interest closest the the parent
+while minimizing the size of the fragment. We can use the distance score calculated with MMD as an indicator of how far the fragment's
+WBO distribution is. When we plot the fragment size against this score, the points that fall on the Pareto front [CITE] are the ones where the
+distance score is the best for for a given fragment size or vice versa. Figure 9B shows an illustrative example of this. The aim of
+any fragmentation scheme is to find fragments on the Pareto front that minimize both the WBO distance and fragment size. In other words,
+they should be on the lower left corner of the plot.
+We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner.
+To do that, we fragmented the 50 molecules in the validation set using different disruption thresholds. For every molecule, we found the distance
+score of their fragments' WBO distribution and their size. We then plotted all fragments from the validation set for different thresholds [figure 11]
+When the threshold is low, the fragmenation scheme will generate fragments which have very good scores, but many of them will be too big
+for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
+fragments that are small but the distance score is too big. For the molecules we tested, a threshold of 0.01 leads to the most fragments
+on the Pareto front as shown in table 1. This threshold is similar to what we found when we looked at the distribution of standard deviations for
+WBO distributions with respect to conformations [figure 5 blue distribution]. Most of them fall under 0.02. Both of these data points
+leads us to recommend a distruption threshold of 0.01 for our fragmentation scheme. While the current scheme does not provide a perfect solution, the
+plot in figure 11B shows a few fragments outside of the lower left region, it preforms considerably better than other schemes such as the Pfizer
+scheme [Figure 11D] and Bemis Murko [Figure 11E]. The Bemis Murko scheme was not designed for this application so it is not surprising how poorly it
+preforms.
