testing integrating figure

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -4,7 +4,7 @@
 In most forcefields, torsions are defined by the quartet of atom types involved in the dihedral [CITE].
 However, the quartet of atom types do not always capture the relevant chemistry, especially when the effects
 are non local i.e., atoms contributing to hyperconjugation, delocalization or other non classical effects,
-are not part of the quartet involved in the torsion [@doi:10.1186/s13321-019-0371-6]. Figure 2A illustrates
+are not part of the quartet involved in the torsion [@doi:10.1186/s13321-019-0371-6]. Figure {@fig:biphenyls}A illustrates
 such a case with a series of biphenyls in different protonation states. While the MM torsion profiles
 are all the same (Fig 2B), the QC torsion profiles are different for each protonation state (Fig 2C). 
 The torsion energy barrier increases relative to the neutral state for the cation, anion and zwitterion, in that order.
@@ -23,7 +23,14 @@ SMIRKS space in a data driven way. In addition, this example illustrates why fra
 appropriately for QC torsion scans requires human expertise and is difficult to automate. 
 In this case, a small change three bonds away from the torsion central bond changed the bond from 
 a rotatable bond to a non-rotatable conjugated bond. When fragmenting molecules we need to avoid
-destroying a bond's chemical environment by naively removing an important remote substituent. 
+destroying a bond's chemical environment by naively removing an important remote substituent.
+
+![**Illustration of the sensitivity of torsion profiles to remote chemical changes in a molecule**
+**[A]** Biphenyl protonation states and tautomers with increasing Wiberg bond order for the central bond.
+**[B]** The resonance structure of the biphenyl zwitterion shows that the central bond is conjugated. The Wiberg bond order
+and torsion scan for this bond (see **A** and **C**) are reflective of a conjugated bond. **[C]** Relative QC energy as a function of
+torsion angle of the central bond. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Torsion barrier heights vs
+WBOs. The color of the data points correspond to the highlighted bonds in **A**. The WBO and QC torsion barrier heights are correlated.](images/figure_3.svg){#fig:biphenyls}
 
 ### The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
