added statistics table

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -30,7 +30,7 @@ destroying a bond's chemical environment by naively removing an important remote
 **[B]** The resonance structure of the biphenyl zwitterion shows that the central bond is conjugated. The Wiberg bond order
 and torsion scan for this bond (see **A** and **C**) are reflective of a conjugated bond. **[C]** Relative QC energy as a function of
 torsion angle of the central bond. The colors of the QC scan corresponds to the highlighted bonds in **A**. **[D]** Torsion barrier heights vs
-WBOs. The color of the data points correspond to the highlighted bonds in **A**. The WBO and QC torsion barrier heights are correlated.](images/figure_3.svg){#fig:biphenyls}
+WBOs. The color of the data points correspond to the highlighted bonds in **A**. The QC torsion barrier height is linear WBO.](images/figure_3.svg){#fig:biphenyls}
 
 ### The Wiberg Bond Order quantifies the electronic population overlap between two atoms and captures bond conjugation
 The Wiberg bond order (WBO) is a bond property that is calculated using orthonormalized atomic orbitals that are used
@@ -154,8 +154,32 @@ groups at the meta or para position such as methyl. We chose the representative 
 by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in supplementary
 figure 4. We show a representative series of torsion scan for the nitro functional group in figure {@fig:sub_phenyl_qc_scan}A. The torsion energy barrier height
 increase with increasing ELF10 WBO of the bond. In addition, {@fig:sub_phenyl_qc_scan}B  shows that the Wiberg-Lowdin bond orders are anti-correlated with
-the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the trend
-shown in {@fig:biphenyls}D  generalizes to all functional groups tested in this set {@fig:subsituted_phenyls}E.
+the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the linear
+relationshipt between WBOs and torsion energy barrier height
+shown in {@fig:biphenyls}D  generalizes to all functional groups tested in this set {@fig:subsituted_phenyls}E. Table @tbl:stats lists the slopes and
+associated statistics for the fitted lines.
+
+|functional group | slope | $r^2$ | P value | standard error |
+|---|---|---|---|---|
+| $N(Me)_2$ | 116.916250 | 0.880571 | 0.000019 | 14.352479 |
+| $NHMe$ | 134.517241 |  0.896103 |  0.000033 | 16.194060 |
+| $NH_2$ |   64.266814 |  0.577819 |  0.017438 | 20.763035 |
+| $NHEt$ |  119.513117 |  0.836392 |  0.000552 | 19.978559 |
+| $NH(C_3H_7)$ |  163.763962 |  0.871119 |  0.000236 | 23.808080 |
+| $OH$ |  154.824936 |  0.729133 |  0.003393 | 35.666975 |
+| $OMe$ |  185.309951 |  0.800852 |  0.006494 | 41.326214 |
+| $OEt$ |  119.662499 |  0.479470 |  0.038706 | 47.124984 |
+| $NHCON(Me)_2$ |  159.312781 |  0.579507 |  0.010533 | 47.979491 |
+| $NHCONHMe$ |  127.645256 |  0.434585 |  0.053430 | 55.030363 |
+| $NHCONH_2$ |  238.119990 |  0.734429 |  0.003158 | 54.120536 |
+| $NHCOEt$ |  205.802258 |  0.692740 |  0.005374 | 51.804680 |
+| $NHCOMe$ |  144.320372 |  0.457787 |  0.065376 | 64.121783 |
+| $OCONH_2$ |  172.716947 |  0.508785 |  0.111518 | 84.854215 |
+| $COOH$ |  267.218639 |  0.739937 |  0.061417 | 91.463658 |
+| $COOEt$ |  149.012778 |  0.581298 |  0.077956 | 63.233457 |
+| $NO_2$ |  302.072242 |  0.909174 |  0.003192 | 47.737899 |
+
+Table: slope and associated statistics for torsion barrier height vs WBO for selected functional groups {#tbl:stats}
 
 ![**Löwdin-Wiberg bond orders are anti correlated with QC torsion scans**
 **[A]** QC torsions for methylamino in series of different chemical environment. Barrier heights increase with increasing ELF10 AM1 WBOs
