added figure of molecules in validation set

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -304,12 +304,15 @@ While fragments 1, 5 and 8 are all small, the loss of the ring results in larger
 
 The goal of any fragmentation scheme is to find fragments on the Pareto front that minimize both the changes in the chemical environment of the bond
 and fragment size. In other words, they should be on the lower left corner of the plot. To test our fragmentation scheme, we wanted to find the
-most challenging molecules to fragment from our validation. To to that, we scored all resulting fragments using equation @eq:mmd_sqrd and chose the 100 molecules
-that had bonds where fragments that included all 1-5 atoms around the bond had the largest MMD.
+most challenging molecules to fragment from our validation. To do that, we scored the WBO distributions of all resulting fragments using equation @eq:mmd_sqrd and chose 100 molecules
+that had bonds where fragments that included all 1-5 atoms around the central bond had the highest distance scores. The molecules and
+their sensitive bonds are highlighted are shown in figure {@fig:validation_set}. This set included many molecules in charged states and
+are challenging to fragment.
 
-The final validation set was chosen by finding the fragments that have bonds with the top 50 scoring MMD scores.
-The 50 molecules are shown in figure 10. The sensitive bonds that are high scoring are highlighted.
-
+![**Molecules used to assess fragmentation schemes**
+The highlighted bonds are sensitive to remote substituent changes and pose a challenge for fragmentation schemes.
+These molecules contained bonds where removing substituents that are more than 2 bonds away changed the WBO distribution relative to their
+parent such that their MMD scores ranked in the top 100](images/figure_10.svg){#fig:validation_set}
 
 (Should I discuss some interesting long distance chemical changes this set picked up here? It's an exquisitly rich data set)
 
