added joint plots

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -210,7 +210,7 @@ in figure 8 is as follows:
 fragment's WBO is within the threshold of the parent WBO.
 
 ### Fragmentation schemes can be assessed by their ability to preserve the chemical environment while minimizing fragment size
-This fragmentation scheme improves upon Pfizers scheme, however, it leaves some parameters up to the user. In order to asses various
+This fragmentation scheme improves upon Pfizers scheme [CITE], however, it leaves some parameters up to the user. In order to asses various
 thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
 a useful validation set. The goal of this set was to find molecules that are challenging to fragment. In other words, molecules
 that have bonds that are sensitive to remote substituent changes. To find these molecules, we first filtered DrugBank (version 5.1.3 downloaded
@@ -231,10 +231,20 @@ We then generated all possible fragments of these molecules by using a combinato
 bond is fragmented and then all possible connected fragments are generated where the smallest fragment has 4 heavy atoms and the largest
 fragment is the parent molecule. This scheme generated ~300,000 fragments.
 For each fragment, Omega was used to generate conformers and the AM1 WBO was calculated for every bond in every conformer. This resulted
-in a distribution of WBOs for all bonds in all fragments. The resulting dataset is exquisitely rich where very nuanced, long distance
+in a distribution of WBOs for all bonds in all fragments. The resulting dataset is very rich where exquisitely nuanced, long distance
 chemical changes are detected.
 
-{@fig:dabrafenib_wbo_dists} shows an example of the results of combinatorial
+![**Changes in WBO distributions are a good indicator of remote substituent electronic effects**
+**[A]** An illustrative example of the shift in the conformationally dependent WBO distributions due to crucial chemical changes such as
+the loss of Fluorine. The distributions are shaded with their corresponding distance score shown in the colorbar on the right. The parent
+molecule WBO distribution (numbered 4) is shaded red. Selected distributions are outlined and the corresponding fragments are shown in C.
+**[B]** Computational cost of fragment ($heavy atoms^3$) vs distance score (MMD) of the fragment indicates that it is possible
+to reduce teh cost of torsion scans without destroying the torsion profile. The black line is the Pareto frontier, or the
+cheapest fragment with the best score at that size. The selected fragment should be on the Pareto front at the
+lower left corner. **[C]** Selected fragments. Bonds are highlighted with their distance score. The ELF10 WBO is shown
+in the boxes above the highlighted bonds.](images/figure_9.svg){#fig:dabrafenib_wbo_dists}
+
+Figure {@fig:dabrafenib_wbo_dists} shows an example of the results of combinatorial
 fragmentation and how this data can be used to benchmark fragmentation schemes. All rotatable bonds in the parent molecule, Dabrafenib ({@fig:dabrafenib_wbo_dists}C 4)
 were fragmented into 11 fragments (in this example, the trimethyl was not fragmented) resulting in 108 connected fragments when all connected combinations were generated.
 Of those 108 fragments, 44 fragments contained the bond between the sulfur in the sulfonamide and phenyl ring highlighted in fragments in {@fig:dabrafenib_wbo_dists}C.
@@ -249,16 +259,6 @@ phenyl ring and both of their distributions are shifted to the right relative to
 on the ring and are shifted to the right even more. Since removing the ring bonded to the nitrogen shifts the WBO distribution in the opposite direction,
 fragment 1, while having two fluorine, is shifted to the left of the parent distribution, fragment 5 WBO distribution overlaps with the parent WBO distribution
 even if it only has one fluorine, and fragment 8 is only shifted slightly to the right of the parent WBO distribution with no fluorine.
-
-![**Changes in WBO distributions are a good indicator of remote substituent electronic effects**
-**[A]** An illustrative example of the shift in the conformationally dependent WBO distributions due to crucial chemical changes such as
-the loss of Fluorine. The distributions are shaded with their corresponding distance score shown in the colorbar on the right. The parent
-molecule WBO distribution (numbered 4) is shaded red. Selected distributions are outlined and the corresponding fragments are shown in C.
-**[B]** Computational cost of fragment ($heavy atoms^3$) vs distance score (MMD) of the fragment indicates that it is possible
-to reduce teh cost of torsion scans without destroying the torsion profile. The black line is the Pareto frontier, or the
-cheapest fragment with the best score at that size. The selected fragment should be on the Pareto front at the
-lower left corner. **[C]** Selected fragments. Bonds are highlighted with their distance score. The ELF10 WBO is shown
-in the boxes above the highlighted bonds.](images/figure_9.svg){#fig:dabrafenib_wbo_dists}
 
 #### Scoring how well fragments preserve chemical environments using WBO distributions
 Each fragment needs to be assigned a score of how well is preserves its parent chemical environment. To score each fragment, we compare
@@ -302,29 +302,36 @@ distance score if the important remote substituents are not in the fragment. Fra
 score because they both are missing the important fluorine. Data points 10 and 11 show the same trend for the fragments missing both fluorine.
 While fragments 1, 5 and 8 are all small, the loss of the ring results in larger distance scores.
 
-The goal of any fragmentation scheme is to find fragments on the Pareto front that minimize both the changes in the chemical environment of the bond
-and fragment size. In other words, they should be on the lower left corner of the plot. To test our fragmentation scheme, we wanted to find the
-most challenging molecules to fragment from our validation. To do that, we scored the WBO distributions of all resulting fragments using equation @eq:mmd_sqrd and chose 100 molecules
-that had bonds where fragments that included all 1-5 atoms around the central bond had the highest distance scores. The molecules and
-their sensitive bonds are highlighted are shown in figure {@fig:validation_set}. This set included many molecules in charged states and
-are challenging to fragment.
-
 ![**Molecules used to assess fragmentation schemes**
 The highlighted bonds are sensitive to remote substituent changes and pose a challenge for fragmentation schemes.
 These molecules contained bonds where removing substituents that are more than 2 bonds away changed the WBO distribution relative to their
 parent such that their MMD scores ranked in the top 100](images/figure_10.svg){#fig:validation_set}
 
+The goal of any fragmentation scheme is to find fragments on the Pareto front that minimize both the changes in the chemical environment of the bond
+and fragment size. In other words, they should be on the lower left corner of the plot. To test our fragmentation scheme, we wanted to find the
+most challenging molecules to fragment from our validation. To do that, we scored the WBO distributions of all resulting fragments using equation @eq:mmd_sqrd and chose 100 molecules
+that had bonds where fragments that included all 1-5 atoms around the central bond had the highest distance scores. The molecules and
+with their sensitive bonds highlighted are shown in figure {@fig:validation_set}. This set included many molecules in charged states and
+are challenging to fragment.
+
 (Should I discuss some interesting long distance chemical changes this set picked up here? It's an exquisitly rich data set)
 
-We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner.
-To do that, we fragmented the 50 molecules in the validation set using different disruption thresholds. For every molecule, we found the distance
-score of their fragments' WBO distribution and their size. We then plotted all fragments from the validation set for different thresholds [figure 11]
+![**Assessment of fragmentation scheme**
+Computational cost vs distance score of the fragments for the bonds in the benchmark set shown in figure {@fig:validation_set}.
+Computational cost is the cubed of heavy atoms in the fragment. The threshold is the maximum amount of change allowed
+in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure_11.svg){#fig:joint_plots}
+
+
+We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in figure {@fig:dabrafenib_wbo_dists}B).
+To do that, we generated fragments for the highlighted bonds in the 100 molecules shown in figure {@fig:validation_set} set using different disruption thresholds. For every fragment, we found the distance
+score of their fragments' WBO distribution and their computational cost. We then plotted all fragments from the validation set for different thresholds {figure {fig:joint_plots}.
 When the threshold is low, the fragmenation scheme will generate fragments which have very good scores, but many of them will be too big
 for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
-fragments that are small but the distance score is too big. For the molecules we tested, a threshold of 0.01 leads to the most fragments
+fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.01 leads to the most fragments
 on the Pareto front as shown in table 1. This threshold is similar to what we found when we looked at the distribution of standard deviations for
 WBO distributions with respect to conformations [figure 5 blue distribution]. Most of them fall under 0.02. Both of these data points
-leads us to recommend a distruption threshold of 0.01 for our fragmentation scheme. While the current scheme does not provide a perfect solution, the
-plot in figure 11B shows a few fragments outside of the lower left region, it preforms considerably better than other schemes such as the Pfizer
+leads us to recommend a distruption threshold between 0.05 and 0.01 for our fragmentation scheme. While the current scheme does not provide a perfect solution, the
+plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01 and 0.05. This scheme  preforms considerably better than other schemes such as the Pfizer
 scheme [Figure 11D] and Bemis Murko [Figure 11E]. The Bemis Murko scheme was not designed for this application so it is not surprising how poorly it
 preforms.
+
