udated benchmark figure and added table

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -322,16 +322,31 @@ Computational cost is the cubed of heavy atoms in the fragment. The threshold is
 in the ELF10 WBO relative to the parent's ELF10 WBO during fragmentation.](images/figure_11.svg){#fig:joint_plots}
 
 
-We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in figure {@fig:dabrafenib_wbo_dists}B).
+We want to find the parameters for our fragmentation scheme that maximizes the number of fragments that end up in that lower left corner (illustrated in figure {@fig:dabrafenib_wbo_dists}, B).
 To do that, we generated fragments for the highlighted bonds in the 100 molecules shown in figure {@fig:validation_set} set using different disruption thresholds. For every fragment, we found the distance
 score of their fragments' WBO distribution and their computational cost. We then plotted all fragments from the validation set for different thresholds {figure {fig:joint_plots}.
 When the threshold is low, the fragmenation scheme will generate fragments which have very good scores, but many of them will be too big
 for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
-fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.01 leads to the most fragments
-on the Pareto front as shown in table 1. This threshold is similar to what we found when we looked at the distribution of standard deviations for
+fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.03 leads to the most fragments
+in the lower left quadrant (defined as cost < 10000 and score < 0.1) as shown in table @tbl:benchmark. This threshold is similar to what we found when we looked at the distribution of standard deviations for
 WBO distributions with respect to conformations [figure 5 blue distribution]. Most of them fall under 0.02. Both of these data points
-leads us to recommend a distruption threshold between 0.05 and 0.01 for our fragmentation scheme. While the current scheme does not provide a perfect solution, the
-plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01 and 0.05. This scheme  preforms considerably better than other schemes such as the Pfizer
-scheme [Figure 11D] and Bemis Murko [Figure 11E]. The Bemis Murko scheme was not designed for this application so it is not surprising how poorly it
-preforms.
+leads us to recommend a distruption threshold between 0.05 and 0.01 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
+plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
+scheme Pfizer used in []@doi:10.1021/acs.jcim.9b00373]({@fig:joint_plots}, lower right and table @tbl:benchmark).
+
+|scheme | fragments in lower left quadrant |
+|---|---|
+| 0.001 | 155 |
+| 0.005 | 205 |
+| 0.01 | 232 |
+| 0.03 | 246 |
+| 0.05 | 207 |
+| 0.07 | 180 |
+| 0.1 | 162 |
+| Pfizer | 189 |
+
+Table: Number of fragments in the lower left quadrant in figure {@fig:joint_plots} defined as a distance score less than
+0.1 and computational cost less than 10000. {#tbl:benchmark}
+
+####
 
